java 11 pom updates