@@ -70,11 +70,6 @@
                         <groupId>org.apache.maven.surefire</groupId>
                         <artifactId>surefire-junit47</artifactId>
                         <version>2.22.0</version>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
                     </dependency>
                 </dependencies>
                 <configuration>
